--- a/draft.tex
+++ b/draft.tex
@@ -108,19 +108,37 @@ However, currently deployed cloud platforms present still several limitation.
 
 First, it is still difficult to deliver cloud applications which are able to transparently leverage over several platform resources. The concept of SuperCloud \cite{art:blan, xclo:blank} addresses this kind of problems. Multi-platform coordination primarily for different standard and several format lock-in. Unfortunately, those lock-in are not only due to market strategical decisions but they also reflects the virtualization technology heterogeneity. For example, each cloud provider could use a different storage system or a different format to store VMs images. Different hypervisors have nowadays a low degree of compatibility between them and this generally prevents leveraging on some popular features like `` VM live migration'' between different platform. Moreover, this incompatibility could also be enlarged if we consider that several platforms adopts one or more different virtualization techniques. In addition, this situation induce a tight dependency between the customer and the cloud provider and hardens the possibility to guarantee the availability of service in presence of a certain provider or to put in place some geographical optimization due to cost or traffic origin. The result was that some data server failures in the past has been catastrophic, causing a prolonged outage of service for a plenty of applications.. In the remaining part of the work, we will refer to those issues as ``horizontal'' requirements, that shows straightforwardly their multi-platform nature.
 
-The second class of issues concerns platform integrity and user data privacy. In parituclar, the security architecture of those platform normally do not provide high assurance of privacy. Morevoer, from the point of a cloud provider, it is difficult to observe and inspect deeply the functioning of the whoe platform, leveraging commodity general purpose hypervisors (GPH).
+The second class of issues concerns platform integrity and user data privacy. At first, the security architecture of those platform normally does not provide high assurance of privacy. Morevoer, from the point of a cloud provider, it is difficult to observe and inspect deeply the functioning of the whole platform, leveraging commodity general purpose hypervisors (GPH).
 General Purpose Hypervisors are executed at the most privileged level and so, it is complicated to detect and intervene on them in presence of malicious attack or misbehavior, without service interruption for all VMs hosted on the server. Cloudvisor \cite{cloudvisor:zhang} analyzed the problem proposing a nested architecture, where the GPH is executed at a lower level of privilege and a tiny hypervisor, responsible to prevent data disclosure, is executed at Ring 0.Hence, this kind of requirements could be called vertical requirements, because they involves layers executed at different layer of the software architecture.
 
-To sum up, nested virtualization has shown to be a interesting pattern for modern cloud platform, that could improve dramatically features and integrity of cloud platform. However, no architecture had been presented to address vertical and horizontal class of problems at the same time. XenBlanket does not investigate cloud security concerns, limiting the focus on new potential feature of a coordinated multi-provider cloud. Cloudvisor proposed a security architecture that leverages nested virtualization without allowing the possibility of executing more than one nested hypervisor at time, that is a crucial requirements of a multi-provider cloud platform. 
-  
-In this paper, we will present a nested architecture 
-% Name?
-that address this two different horizontal and vertical kind of issues at the same time. 
+To sum up, nested virtualization has shown to be a interesting pattern for modern cloud platform, that could improve dramatically features and integrity of cloud platform. From this initial analysis it is possible to extract several design principles, reported in table \ref{int:des}
+
+\begin{table}
+\label{int:des}
+\begin{tabular}{llll}
+\toprule
+Id & Functional design Principle & Class &\\
+\midrule
+   DS1 & User-Data privacy & Horizontal & \\
+   DS2 & Inter-platform support & Horizontal & \\
+   DS3 & Small TCB & Vertical & \\
+   DS4 & Fail-Safe modular architecture &  & \\
+\bottomrule
+      \end{tabular}
+\end{table}
+
+\paragraph{Inter-platform support} The cloud architecture has to be designed in order to support directly different platforms and service providers. 
+\paragraph{Fail-Safe modular architecture} In order to recover soft failures, the archtecure is supposed to be fail-safe, being able of automatically migrate instances or user-data in presence of a menace, but also reactivating the correct functioning in presence of a software failure. In order to satisfy this property, the amount of safety-critical components has to be as lowest as possible and the overall design has to be kept as modular as possible
+\paragraph{Small TCB} The amount of lines of code executed at the highest level of privilege is normally proportional to the number of potential failures and bugs in the platform. According to this, an architecture presenting a tiny TCB will improve its safety and integrity properties by design.
+\paragraph{User-Data privacy} The architecture's administrator would not have the right to inspect and analyze user data and instances, without the explicit consensus with the user above mutually trusted services. User-data privacy is a major challenge of modern cloud platforms. It is important to identify a trade-off that allows providers to identify and intervene on possible menaces, but also guarantee the impossibility for a curious or malicious operator to access to them without restrictions.
+
+Moreover, beside this functional design principles specifying which features have to be achieved by the platform, another set of non-functional requirements could be identified. Those requirements concern not directly features or requirements, but the feasibility of the architecture. For example, a major issue could be represented by the amount of code lines that have to be added and maintained to an existing architecture to meet the functional requirement. Even it does not represent a technical limitation to a certain proposal, it could become a ``show-stopper'' factor for its utilization.
 
 
 \section{Related Work}
 Cloud computing feature set could be enlarged exploiting two layers of virtualization instead of just one. The presence of two different hypervisors allows the possibility to specialize hypervisors functions. Instead of having a general purpose hypervisor we could split task in two different layers, interconnected with a well defined interface.
 Each layer will have to care about a subset of feautures, simplifying overall development.
+However, no architecture had been presented to address vertical and horizontal class of problems at the same time. XenBlanket does not investigate cloud security concerns, limiting the focus on new potential feature of a coordinated multi-provider cloud. Cloudvisor proposed a security architecture that leverages nested virtualization without allowing the possibility of executing more than one nested hypervisor at time, that is a crucial requirements of a multi-provider cloud platform. In fact, in this scenario, each user has to run its own L1 hypervisor instance to enforce a compatibility layer, removing incompatibilities between different providers.
 
 Introducing nested virtualization, we have to identify the two main actors involved in the virtualization process: bare-metal hypervisor (L0) and nested hypervisor (L1). In addition, we will refer to the nested guest as L2 guest. 
 However, virtualization has a computational overhead. It is small when we are dealing with single layer virtualization, but it grows exponentially when we try to add further levels \cite{rec:virt}. This huge performance overhead has prevented nested virtualization adoption during last years.
@@ -128,9 +146,9 @@ However, virtualization has a computational overhead. It is small when we are de
 Nowadays, several works demonstrate that it is possible to put in place low overhead nested virtualization using special approaches \cite{turtle:ibm} \cite{cloudvisor:zhang}. Moreover, other works try to recover performance loss exploiting multi-level consolidation, introduced in nested virtualization \cite{art:blan}.
 Therefore, we will consider those overhead not as consistent to prevent the possibility to exploit a similar approach.
 
-\section{Nested Virtualization}
+\section{Classic nested virtualization approach}
 
-Recursive virtualization} refers to a system architecture with several layers of virtualization. It consists in a ``virtualized'' virtualization, where the guest system virtualize a nested guest. The concept could be generalized to an arbitrary number of nested guest layers.
+Recursive virtualization refers to a system architecture with several layers of virtualization. It consists in a ``virtualized'' virtualization, where the guest system virtualize a nested guest. The concept could be generalized to an arbitrary number of nested guest layers.
 More formally, Popek \& Golberg \cite{Popek:1974:FRV:361011.361073} discussed this subject, introducing the concept of ``recursively virtualizable'' machine and giving an initial definition of recursive virtual machines: If it is possible for a virtual machine to run under itself a copy of the VMM that could also exhibit all the properties of the VMM and this procedure could be repeated until the resources of the systems are consumed, then the original machine is recursively virtualizable.
 Moreover, the authors practically defined the features needed by a machine in order to be recursive virtualizable, exploiting concepts of virtualizable architecture and VMM\label{par:form} and introducing a second theorem \cite{Popek:1974:FRV:361011.361073}.
 
@@ -138,7 +156,7 @@ Looking at hypervisor specialization, we match those feature set with the differ
 L0 is charged of the vertical aspects of the platform. It has to achieve  the best possible performances and enforcing the strongest possible level of isolation. L0 represents the last line of defense of the platform and a privileged point of global status observation.
 On the contrary, L1 is responsible for horizontal feature set. it has to provide the widest possible support to different platforms and the capacity to virtualize adopting different techniques ( para-virtualization, hardware-assisted, dynamic binary translation). In this sense, Williams et al. propose a patched version of Xen, Xen Blanket, to accomplish a L1 virtualization layer, designed to run over different platforms.
 
-\section{Limits}
+\subsection{Limits}
 
 Nowadays, nested virtualization presents several limits related to the hardware support and software state of implementation. At first, to provide nested virtualization, hypervisors has to provide an exact copy of hardware virtualization facilities. The most exploited technique, Full virtualization with hardware assistance (HVM) relies on a quite complex dedicated support.
 This set of facilities assist instruction emulation, memory address translation and device management. Both Xen and KVM, the most used open-source hypervisor propose a nested VMX (nVMX) feature, that consists in the possibility to efficiently handle nested hardware virtualization, in presence of a single-layer hardware facilities.
@@ -172,7 +190,7 @@ Therefore, leveraging this concept of microkernels, a micro hypervisor (MH) is c
 
 In addition, MH inherits the concept of micro-kernel to implement different ``personalities''. Those ``personalities'' are concretely a set of ``processes'' handling specific functions running in user-space. As those functions are implemented outside the kernel, they are not unique but they are changeable and could coexist at the same time. This feature was seen with interest because of the possibility to move some virtualization-related from the kernelspace to user-space. This extraction could allow to strengthen the platform, considering that user-space crashes are generally not fatal for the whole system.  A possible example, that will be analyzed in next section, is the user-space VMM component of Nova, Vancouver, that resides in user-space \cite{nova}.
 
-\section {MH issues}
+\subsection {MH open issues}
 
 Despite the positives, MH approaches had demonstrated some limitations. Firstly, the straightforward one is the initial lack of hardware support, lack of device drivers are still a relevant Achilles' heel for this solutions. However, this kind of issue could be addressed leveraging I/O passthrough techniques, although it will cause exclusive allocation issues.
 
@@ -181,11 +199,13 @@ Moreover, as reported in previous sections, several cloud computing issues are s
 Finally, for sake of keeping the TCB small, MH could generally lack of several virtualization features, commonly available on modern GPH hypervisor. For instance, XMHF does not support multiple guests. This kind of drawbacks could represent important issues to handle and limit the potential interest in MH, even they are able to introduce several important features.
 
 
-\section{Possible architectures}
+\section{Design Principles}
 
 The adoption of an extra layer of virtualization is capable to introduce a remarkable set of new features but it does not reduce the dimension of Trusted Code Base (TCB). 
 MH could represent a new approach to improve the potential benefits provided by the adoption of nested virtualization.  It could be possible to combine positive features of GPH and MH approaches, leveraging the new extra layer of virtualization given by the nesting process.
 Next sections will present a brief analysis of all four possible combinations of GPH and MH, underlying potentialities, drawbacks and potential cost of implementation.
+
+
 
 \subsection{GPH over GPH}
 
@@ -198,13 +218,13 @@ Supposing the completeness and the correctness of nested virtualization hardware
 %Although this architectures presents an extra layer between the nested guest, normally controlled by the cloud user and the system critical part, L0, the latter is far from a satisfying security level. The TCB of KVM that is represented by the entire Linux Kernel is normally around 200 KLoCs, considering the medium size of a deployed Linux kernel. 
 %Moreover, default KVM configuration does not provide a transparent protection mechanism between different VMs, so that compromising one instance of QEMU, that is executed in user-space, an attacker could compromise all the others VMs on the platform. 
 
-\section{MH over MH}
+\subsection{MH over MH}
 
 MH on MH in reported only for completeness. The interest on such architecture is limited because it will still present all cited issues of MH.
 Moreover, the lack of nested VMX functionalities prevents us to concretely test this kind of architecture, because MH normally rely on VMX facilities in order to create HVM guests.
 To conclude, nested virtualization is exploited in order to fill eco-systems gaps with GPH but MH over MH does not propose any improvement in this sense.
 
-\section{MH over GPH}
+\subsection{MH over GPH}
 \label{par:mog}
 
 The second architecture, proposed in order to reduce security concerns, is built combining an GPH at L0 and a MH at L1. 
@@ -217,7 +237,7 @@ Secondly, the number of driver needed to properly support devices is significant
 In addition, the amount of code running in L0 kernel space is still as big as before and, therefore, no TCB reduction. 
 Finally, adopting a MH as L1 prevents to use inter-platform enhanced features. As analyzed when dealing with MH design, the price of having a tiny core is normally paid with a lack of certain functionalities. For example, XMHF only supports one single guest. It could be easily noticed that this approach is not architecturally able to provide any new "horizontal" features, leveraging on nested virtualization. Therefore, the architecture is only able to provide the same features that are provided by today deployed ones, with an enhanced but not sufficient level of isolation.
 
-\section{GPH over MH}
+\subsection{GPH over MH}
 \label{par:gom}
 
 In this configuration, the amount of code that have to be trusted is lower than other architectures, due to the modular structure of micro-kernels., executed at L0.
@@ -229,7 +249,7 @@ More generally, from an architectural point of view, the general MH minimalist a
 
 Another important class is the necessity to explicit hardware devices support. Device drivers represents a general Achilles' heel of MH, due the general cost of development. However, this class of problem could be addressed leveraging device assignment. L1 GPH hypervisor will handle the real device, using the proper driver now demoted to run in a lower level of privilege. It has to be underlined that this solution could represent a feasible approach only if it possible to overcome the exclusive allocation trouble (SR-IOV).
 
-\section{Architecture comparison}
+\subsection{Architecture comparison}
 
 To conclude, this section provides a short comparison between different platforms, contrasting architecture features above the two main different types of benefits given by nested virtualization, as reported widely in literature \cite{art:blan, nested:berghmans,  cloudvisor:zhang, turtle:ibm}. The first could be identified in the augmented degree of isolation the architecture could enforce between host OS and the "customer" point of access, leveraging a trusted core. The second one is represented by the possibility to leverage multiple virtualization layers to easily define inter-platform policy and operations between different platforms.
 In the above paragraphs, four different possible architectures were presented with the set of  substitute a GPH  with a MH, looking at the positive and negative new features. The starting point is GPH over GPH, a well analyzed approach in literature \cite{turtle:ibm, art:blan, }. We underlined features and limitations of this architecture in the first paragraphs and in the 
@@ -247,13 +267,13 @@ However, it has not be underestimated, however, that para-virtualization support
 
 To sum up,  the adoption of MH could  increase feature set introduced by nested virtualization adoption. The first impeding problem is the implementation of MH, able to propose to guest to virtualize with hardware assistance.
 
-\section{Xen over NOVA}
-
-
+\section{Implementation}
+\subsection{Xen over NOVA}
 \paragraph{Inter-platform features}
 \paragraph{Tiny TCB}
 \paragraph{Leveraging existing APIs}
 \paragraph{Fail-safe components architecture}
+\subsection{}
 
 
 %
