DS added + Comparison table

--- a/biblio.bib
+++ b/biblio.bib
@@ -640,3 +640,8 @@
 	url = {http://genode.org/documentation/platforms/nova}
 }
 
+@article{ec2:disrupt,
+	title = {{Amazon Web Services outage takes down Netflix, other sites}},
+	url = {http://aws.amazon.com/fr/message/65648/}
+}
+
